--- a/.env.local-example
+++ b/.env.local-example
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_BASE_URL=""
-NEXT_PUBLIC_API_BASE_URL=""
+NEXT_PUBLIC_SWAPI_URL="https://swapi-graphql.netlify.app/.netlify/functions/index"
