--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@apollo/client": "^3.11.4",
+        "@apollo/experimental-nextjs-app-support": "^0.11.2",
         "clsx": "^2.1.1",
+        "graphql": "^16.9.0",
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18"
@@ -21,15 +24,20 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^8.0.1",
+        "@typescript-eslint/parser": "^8.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
         "husky": "^9.1.4",
         "lint-staged": "^15.2.8",
         "postcss": "^8",
         "prettier": "3.3.3",
         "sass": "^1.77.8",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3.4.9",
         "typescript": "^5"
     },
     "browserslist": {
@@ -45,8 +53,11 @@
         ]
     },
     "lint-staged": {
-      "*.{js,jsx,ts,tsx,scss}": [
-        "prettier --write --ignore-unknown"
-      ]
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix"
+        ],
+        "*.{js,jsx,ts,tsx,scss}": [
+            "prettier --write --ignore-unknown"
+        ]
     }
 }
