--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/react-dom": "^18",
         "@typescript-eslint/eslint-plugin": "^8.0.1",
         "@typescript-eslint/parser": "^8.0.1",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "eslint-config-prettier": "^9.1.0",
